# Simple-Social-Media-Backend

./: .env  .gitignore  README.md  main.py  pyproject.toml  test.db
app/: app.py  db.py  frontend.py  images.py  schemas.py  users.py
